--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "build": "webpack"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "node-cache": "^5.1.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "rss-parser": "^3.13.0",
     "web-push": "^3.6.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "babel-loader": "^10.0.0",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1"
   }
 }
